--- a/mobile/index.html
+++ b/mobile/index.html
@@ -15,7 +15,7 @@
  <link rel="apple-touch-icon" href="../files/thumb/1.jpg" />
 <meta name="og:image" content="../files/shot.png">
 <meta property="og:image" content="../files/shot.png">
-<title></title>
+<title>苑裡聖賢宮心經</title>
 
 <link rel="stylesheet" href="style/style.css" />
 <link rel="stylesheet" href="style/player.css" />
