--- a/mobile/index.html
+++ b/mobile/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
  <link rel="apple-touch-icon" href="../files/thumb/1.jpg" />
 <meta name="og:image" content="../files/shot.png">
 <meta property="og:image" content="../files/shot.png">
-<title>苑裡聖賢宮心經</title>
+<title>苑裡聖賢宮-心經白話註解</title>
 
 <link rel="stylesheet" href="style/style.css" />
 <link rel="stylesheet" href="style/player.css" />
